--- a/app/globals.css
+++ b/app/globals.css
@@ -17,7 +17,7 @@
   --color-darkColor: #151515;
   --color-lightColor: #52525b;
   --color-lightOrange: #fca99b;
-  --color-shop_light_green: #3b9c3c;
+  --color-shop-light-text: #686e7d;
   --color-deal-bg: #f1f3f8;
 }
 
